# backend/actuators/models/__init__.py
@@ -1,0 +1,3 @@
+from actuators.models.actuators import actuator
+from actuators.models.auth import auth
+from actuators.models.test import test
